cmake_minimum_required(VERSION 2.8.3)
project(ultrasonic)

add_compile_options(-std=c++11)

find_package(catkin REQUIRED)


catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES ultrasonic
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

include_directories(
    include
    ${catkin_INCLUDE_DIRS}
)


add_executable(ultrasonic_single
               src/ultrasonic-single.cpp
               src/jetsonGPIO.c
               include/jetsonGPIO.h)

add_executable(ultrasonic_dual
               src/ultrasonic-dual.cpp
               src/jetsonGPIO.c
               include/jetsonGPIO.h)
